--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
     "react": "^16.3.2",
+    "react-async-bootstrapper": "^2.1.0",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
